id wallpaper and video

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
@@ -37,7 +37,7 @@
         <div class="dropdown-content">
             <a href="../Description/Description.html" id="Description">Description </a>
             <a href="../Foto/Foto.html" id="fotos">Photos</a>
-            <a href="#">Video</a>
+            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
             <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
     </div>
