--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -37,7 +37,7 @@
             <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
             <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
             <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="#">Wallpaper</a>
+            <a href="#" id="wallpaper">Wallpaper</a>
         </div>
     </div>
         <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
