id wallpaper and video + ref

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -35,7 +35,7 @@
         </div>
         <div class="dropdown-content" tabindex="0">
             <a href="../Description/Description.html" id="Description">Description </a>
-            <a href="#">Photos</a>
+            <a href=../Foto/Foto.html id="fotos">Photos</a>
             <a href="../Video/video.html" id="video">Video</a>
             <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
         </div>
