--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -56,7 +56,7 @@
         <li tabindex="0">
             <a href="../../Home/index.html">Home</a>
         </li>
-        <li>fotos</li>
+        <li>Photos</li>
     </ul>
 </header>
 
@@ -67,17 +67,19 @@
             <div class="column">
                 <img src="../../../img/images/12.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/1.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/13.jpg" style="width:100%" alt="">
+                <img src="../../../img/Imges/G3.png" style="width:100%" alt="">
+                <img src="../../../img/Imges/Gurken.jpg" style="width:100%" alt="">
             </div>
             <div class="column">
                 <img src="../../../img/images/14.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/2.jpg" style="width:100%" alt="">
                 <img src="../../../img/images/3.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/cath.png" style="width:100%" alt="">
             </div>
             <div class="column">
                 <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
                 <img src="../../../img/images/15.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/5.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/im.png" style="width:100%" alt="">
             </div>
             <div class="column">
                 <img src="../../../img/images/33.png" style="width:100%" alt="">
@@ -112,43 +114,35 @@
 </main>
 
 <!-- Footer -->
-<footer id="main-footer" class="grid-grid">
+<footer class="footer-distributed">
+    
+    <div class="footer-right">
 
-    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
-    <ul class="socicons-list">
-        <li tabindex="0">
-            <a href='#' target='_blank' >
-                <span class="socicon-facebook"></span>
-            </a>
-        </li>
-        <li tabindex="0">
-            <a href="../../Shop/Home/Shop.html" accesskey="p" > <u>P</u>ackages </a>
-        </li>
-        <li tabindex="0">
-            <a href='#' target='_blank'>
-                <span class="socicon-instagram"></span>
-            </a>
-        </li>
-    </ul>
-    <div>
-        <div vocab="http://purl.org/dc/terms/">
-            <p>Date:
-                <span property="created">2019-01-28</span><br>
-                <span property="creator">Moussa</span> &
-                <span property="creator">Kingsley</span>
-            </p>
-        </div>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+    </div>
 
-        <p vocab="http://creativecommons.org/ns#">
-            All content on this blog item is licensed under
-            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <a href="../../Home/index.html">Home</a>
+            ·
+            <a href="../../Shop/Special%2520offers/SpecialOffers.html">Special Offers</a>
+        </p>
+        <p  vocab="http://creativecommons.org/ns#">
+	       All content on this blog item is licensed under
+            <a class="cc" property="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
-            </a>.
+	       </a>
+            . 
             <span property="attributionName">
-		&copy;2019 Moussa & Kingsley
-	</span>.
+		      &copy;2019 Moussa & Kingsley
+	       </span>.
         </p>
     </div>
+
 </footer>
 </body>
 </html>
