--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -46,45 +46,34 @@
 </nav>
 
 <!-- Section A -->
-<header>
+<main>
     <ul class="breadcrumb">
         <li tabindex="6">
             <a href="../../Home/index.html">Home</a>
         </li>
-        <li>wallpaper</li>
+        <li>Wallpaper</li>
     </ul>
 <div class="slider">
     <figure>
         <div class="slide">
-            <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
+            <img src="../../../img/images/spre2.jpg" alt="" >
         </div>
         <div class="slide">
-            <img src="../../../img/image/apfel-apple-brille-616835.jpg" alt="" >
+            <img src="../../../img/images/spre.png" alt="" >
         </div>
         <div class="slide">
-            <img src="../../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
+            <img src="../../../img/images/spreee.png" alt="" >
         </div>
         <div class="slide">
-            <img src="../../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
+             <img src="../../../img/images/spree.png" alt="" >
         </div>
         <div class="slide">
-            <img src="../../../img/image/ast-baume-boot-772429.jpg" alt="" >
+            <img src="../../../img/images/12.png" alt="" >
         </div>
     </figure>
 </div>
 
-</header>
-
-<!-- Section B -->
-<main id="section-c" class="grid">
-    <div class="content-wrap">
-        <h2 class="content-title">Our Story</h2>
-        <p>
-            Spreewaldgurken is a business founded by family, living in the region of Lübenau (Spreewald). <br>The residents of Spreewald before world war 2 housed visitors for at least a week for a small token as they guided them around the many tourist sites in the area. <br>With the growth of the Internet coupled with people's love for vacation, we setup this business to continue the tradition of old, to familiarize people with the beauty of Spreewald so they have the opportunity to get to know the hidden nature here.<br> Our main goal is to provide customers with a once in a lifetime experience for different budgets. <br>We have received customers from all parts of the world within the last 50 years.<br> We look forward to welcoming you!!!
-        </p>
-    </div>
 </main>
-
 
 <!-- Section C-->
 <div id="main">
@@ -115,43 +104,35 @@
 </div>
 
 <!-- Footer -->
-<footer id="main-footer" class="grid-grid">
+<footer class="footer-distributed">
+    
+    <div class="footer-right">
 
-    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
-    <ul class="socicons-list">
-        <li >
-            <a href='#' target='_blank'tabindex="7" >
-                <span class="socicon-facebook"></span>
-            </a>
-        </li>
-        <li >
-            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="8"> <u>P</u>ackages </a>
-        </li>
-        <li >
-            <a href='#' target='_blank'tabindex="9" >
-                <span class="socicon-instagram"></span>
-            </a>
-        </li>
-    </ul>
-    <div>
-        <div vocab="http://purl.org/dc/terms/">
-            <p>Date:
-                <span property="created">2019-01-28</span><br>
-                <span property="creator">Moussa</span> &
-                <span property="creator">Kingsley</span>
-            </p>
-        </div>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+    </div>
 
-        <p vocab="http://creativecommons.org/ns#">
-            All content on this blog item is licensed under
-            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <a href="../../Home/index.html">Home</a>
+            ·
+            <a href="../../Shop/Special%2520offers/SpecialOffers.html">Special Offers</a>
+        </p>
+        <p  vocab="http://creativecommons.org/ns#">
+	       All content on this blog item is licensed under
+            <a class="cc" property="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
-            </a>.
+	       </a>
+            . 
             <span property="attributionName">
-		&copy;2019 Moussa & Kingsley
-	</span>.
+		      &copy;2019 Moussa & Kingsley
+	       </span>.
         </p>
     </div>
+
 </footer>
 </body>
 </html>
