--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Spreewaldgurcken Day Trip</title>
-    <meta charset="utf-8">
+<head profile="http://dublincore.org/documents/dcq-html/" >
+    <title>SpreewaldGürken</title>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+    <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
+    <meta name="DC.format" scheme="DCTERMS.IMT" content="text/html" />
+    <meta name="DC.type" scheme="DCTERMS.DCMIType" content="Text" />
+    <meta name="DC.subject" content="Spreewald Gurken , schöneSpreewahld" />
+    <meta name="DC.creator" content="Moussa" />
+    <meta name="DC.creator" content="Kingsley" />
+    <meta name="DCTERMS.license"  scheme="DCTERMS.URI" content="http://creativecommons.org/licenses/by/3.0/" />
+    <meta name="DCTERMS.modified" scheme="DCTERMS.W3CDTF" content="2019-01-20" />
+    <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link href="../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
+    <link href="../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
-    <script src="../../../js/Script.js" defer="defer"></script>
+    <script src="../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="displayTrip();accesskey()">
 
@@ -106,43 +116,35 @@
 </main>
 
 <!-- Footer -->
+<footer class="footer-distributed">
+    
+    <div class="footer-right">
 
-<footer id="main-footer" class="grid-grid">
-    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
-    <ul class="socicons-list">
-        <li >
-            <a href='#' target='_blank' tabindex="9" >
-                <span class="socicon-facebook"></span>
-            </a>
-        </li>
-        <li >
-            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="10"> <u>P</u>ackages </a>
-        </li>
-        <li>
-            <a href='#' target='_blank' tabindex="11">
-                <span class="socicon-instagram"></span>
-            </a>
-        </li>
-    </ul>
-    <div>
-        <div vocab="http://purl.org/dc/terms/">
-            <p>Date:
-                <span property="created">2019-01-28</span><br>
-                <span property="creator">Moussa</span> &
-                <span property="creator">Kingsley</span>
-            </p>
-        </div>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+    </div>
 
-        <p vocab="http://creativecommons.org/ns#">
-            All content on this blog item is licensed under
-            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <a href="../../Home/index.html">Home</a>
+            ·
+            <a href="../Special%2520offers/SpecialOffers.html">Special Offers</a>
+        </p>
+        <p  vocab="http://creativecommons.org/ns#">
+	       All content on this blog item is licensed under
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
-            </a>.
+	       </a>
+            . 
             <span property="attributionName">
-		&copy;2019 Moussa & Kingsley
-	</span>.
+		      &copy;2019 Moussa & Kingsley
+	       </span>.
         </p>
     </div>
+
 </footer>
 
 </body>
