--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -88,7 +88,7 @@
     <div class="content-wrap">
         <h1>Winter Boat rides in Spreewald</h1>
         <p>
-            From November to March the Spreewald is winter season. In the cold season, the popular "Glühweinkahnfahrten", as the winter boat drives are called in the Spreewald, start only about twice a day at selected ports. We have cozy Blankets and hot drinks on board for cushion on this romantic winter boat trip through the snowy nature. Now in winter, the silence of nature is almost audible, because in the Spreewald it is very quiet after the peak season. Enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the rivers of the region.
+            From November to March in the Spreewald is winter season. In the winter season, the popular "Glühweinkahnfahrten", as the winter boats are called in the Spreewald, rides only about twice a day at selected ports. We have cozy Blankets and hot drinks on board for cushion on this romantic winter boat trip through the snowy nature. In winter, the silence of nature is almost audible, as tourism in the Spreewald hits the lowest. You should take advantage and enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the rivers of the region.
 
             Tip: Not all ports offer daily winter boat rides in the low season. Therefore, we recommend that prior to your arrival to the ports for "Glühweinkahnfahrten" in Spreewald ask for individual tours.You can find all these offers in sports
         </p>
@@ -127,42 +127,35 @@
 </div>
 
 <!-- Footer -->
-<footer id="main-footer" class="grid-grid">
-    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
-    <ul class="socicons-list">
-        <li >
-            <a href='#' target='_blank' tabindex="10">
-                <span class="socicon-facebook"></span>
-            </a>
-        </li>
-        <li >
-            <a href="../../Shop/Home/Shop.html" accesskey="p" tabindex="11"> <u>P</u>ackages </a>
-        </li>
-        <li>
-            <a href='#' target='_blank' tabindex="12">
-                <span class="socicon-instagram"></span>
-            </a>
-        </li>
-    </ul>
-    <div>
-        <div vocab="http://purl.org/dc/terms/">
-            <p>Date:
-                <span property="created">2019-01-28</span><br>
-                <span property="creator">Moussa</span> &
-                <span property="creator">Kingsley</span>
-            </p>
-        </div>
+<footer class="footer-distributed">
+    
+    <div class="footer-right">
 
-        <p vocab="http://creativecommons.org/ns#">
-            All content on this blog item is licensed under
-            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+    </div>
+
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <a href="../../Home/index.html">Home</a>
+            ·
+            <a href="#">Special Offers</a>
+        </p>
+        <p  vocab="http://creativecommons.org/ns#">
+	       All content on this blog item is licensed under
+            <a class="cc" property="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
-            </a>.
+	       </a>
+            . 
             <span property="attributionName">
-		&copy;2019 Moussa & Kingsley
-	</span>.
+		      &copy;2019 Moussa & Kingsley
+	       </span>.
         </p>
     </div>
+
 </footer>
 </body>
 </html>
