--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Home/Shop.html
@@ -113,43 +113,35 @@
 </div>
 
 <!-- Footer -->
-<footer id="main-footer" class="grid-grid">
+<footer class="footer-distributed">
+    
+    <div class="footer-right">
 
-    <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
-    <ul class="socicons-list">
-        <li >
-            <a href='#' target='_blank' tabindex="11" >
-                <span class="socicon-facebook"></span>
-            </a>
-        </li>
-        <li >
-            <a href="../../Shop/Home/Shop.html" tabindex="12"> Packages </a>
-        </li>
-        <li >
-            <a href='#' target='_blank' tabindex="13">
-                <span class="socicon-instagram"></span>
-            </a>
-        </li>
-    </ul>
-    <div>
-        <div vocab="http://purl.org/dc/terms/">
-            <p>Date:
-                <span property="created">2019-01-28</span><br>
-                <span property="creator">Moussa</span> &
-                <span property="creator">Kingsley</span>
-            </p>
-        </div>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+    </div>
 
-        <p vocab="http://creativecommons.org/ns#">
-            All content on this blog item is licensed under
-            <a property="license" href="http://creativecommons.org/licenses/by/3.0/">
+    <div class="footer-left">
+        <p class="footer-links">
+            ·
+            <a href="../../Home/index.html">Home</a>
+            ·
+            <a href="../Special%2520offers/SpecialOffers.html">Special Offers</a>
+        </p>
+        <p  vocab="http://creativecommons.org/ns#">
+	       All content on this blog item is licensed under
+            <a class="cc" property="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
-            </a>.
+	       </a>
+            . 
             <span property="attributionName">
-		&copy;2019 Moussa & Kingsley
-	</span>.
+		      &copy;2019 Moussa & Kingsley
+	       </span>.
         </p>
     </div>
+
 </footer>
 </body>
 </html>
