--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -13,11 +13,11 @@
     <meta name="DC.creator" content="Kingsley" />
     <meta name="DCTERMS.license"  scheme="DCTERMS.URI" content="http://creativecommons.org/licenses/by/3.0/" />
     <meta name="DCTERMS.modified" scheme="DCTERMS.W3CDTF" content="2019-01-20" />
-    <link href = "../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
-    <link href="../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
-    <link href="../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
+    <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
+    <link href="../../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
+    <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../js/Script.js" defer="defer"></script>
+    <script src="../../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="displayTrip();accesskey()">
 
@@ -131,7 +131,7 @@
             ·
             <a href="../../Home/index.html">Home</a>
             ·
-            <a href="../Special%2520offers/SpecialOffers.html">Special Offers</a>
+            <a href="../Special%20offers/SpecialOffers.html">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
