--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Spreewald Sport</title>
-    <meta charset="utf-8">
+<head profile="http://dublincore.org/documents/dcq-html/" >
+    <title>SpreewaldGürken</title>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+    <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
+    <meta name="DC.format" scheme="DCTERMS.IMT" content="text/html" />
+    <meta name="DC.type" scheme="DCTERMS.DCMIType" content="Text" />
+    <meta name="DC.subject" content="Spreewald Gurken , schöneSpreewahld" />
+    <meta name="DC.creator" content="Moussa" />
+    <meta name="DC.creator" content="Kingsley" />
+    <meta name="DCTERMS.license"  scheme="DCTERMS.URI" content="http://creativecommons.org/licenses/by/3.0/" />
+    <meta name="DCTERMS.modified" scheme="DCTERMS.W3CDTF" content="2019-01-20" />
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
-    <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="blackandwhite" media="all">
+    <link href="../../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
+    <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="../../../js/Script.js" defer="defer"></script>
     <script src="../../../js/SportScript.js" defer="defer"></script>
@@ -119,11 +129,11 @@
             ·
             <a href="../../Home/index.html">Home</a>
             ·
-            <a href="../Special%2520offers/SpecialOffers.html">Special Offers</a>
+            <a href="../Special%20offers/SpecialOffers.html">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" property="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
                 a Creative Commons License
 	       </a>
             . 
