further js changes
js edits

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact Us/Contact.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Contact Us/Contact.html
@@ -17,7 +17,7 @@
     <link href="../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
     <link href="../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <script src="../../js/Script2.js" defer="defer"></script>
+    <script src="../../js/ContactScript.js" defer="defer"></script>
     <script src="../../js/Script.js" defer="defer"></script>
 </head>
 <body onload="displayinfo(); accesskey()">
