--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -18,6 +18,7 @@
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="../../../js/Script.js" defer="defer"></script>
+    <script src="../../../js/HolidayScript.js" defer="defer"></script>
 </head>
 <body onload="displayHoliday() ; accesskey()">
 
