--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -63,10 +63,10 @@
 <header>
     <ul class="breadcrumb">
         <li >
-            <a href="../../Home/index.html" tabindex="6">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
         </li>
         <li >
-            <a href="../Home/Shop.html" tabindex="7">Packages</a>
+            <a href="../Home/Shop.html" tabindex="-1">Packages</a>
         </li>
         <li>Special offers</li>
     </ul>
@@ -150,9 +150,9 @@
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
             ·
-            <a href="#">Special Offers</a>
+            <a href="#" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
