--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Sport/Sport.html
@@ -127,9 +127,9 @@
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
             ·
-            <a href="../Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
