--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -62,7 +62,7 @@
 <header >
     <ul class="breadcrumb">
         <li >
-            <a href="../../Home/index.html" tabindex="6">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
         </li>
         <li>Description</li>
     </ul>
@@ -116,18 +116,18 @@
     
     <div class="footer-right">
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#" tabindex="8"><i class="fa fa-facebook"></i></a>
+        <a href="#" tabindex="9"><i class="fa fa-twitter"></i></a>
+        <a href="#" tabindex="10"><i class="fa fa-linkedin"></i></a>
+        <a href="#" tabindex="11"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
