--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
@@ -60,7 +60,7 @@
 <header>
     <ul class="breadcrumb">
         <li>
-            <a href="../../Home/index.html" tabindex="6">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
         </li>
         <li>Video</li>
     </ul>
@@ -102,18 +102,18 @@
     
     <div class="footer-right">
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#" tabindex="6"><i class="fa fa-facebook"></i></a>
+        <a href="#" tabindex="7"><i class="fa fa-twitter"></i></a>
+        <a href="#" tabindex="8"><i class="fa fa-linkedin"></i></a>
+        <a href="#" tabindex="9"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
