--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -62,7 +62,7 @@
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
      <div>
-         <a href="#section-b" class="btn">Read More</a> 
+         <a href="#section-b" class="btn" tabindex="6">Read More</a>
         </div>
     </div>
 </header>
@@ -75,7 +75,7 @@
     <section id="section-a" class="grid">
         <div class="content-wrap">
             <h3 class="content-title">
-                <a href="index.html">
+                <a href="index.html" tabindex="-1">
                     <img id="logo" src="../../img/Imges/logo1.png" alt="SpreewaldGürken-Home" >
                 </a>
             </h3>
@@ -164,18 +164,18 @@
     
     <div class="footer-right">
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="#" tabindex="7"><i class="fa fa-facebook"></i></a>
+        <a href="#" tabindex="8"><i class="fa fa-twitter"></i></a>
+        <a href="#" tabindex="9"><i class="fa fa-linkedin"></i></a>
+        <a href="#" tabindex="10s"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="#">Home</a>
+            <a href="#" tabindex="-1">Home</a>
             ·
-            <a href="../Shop/Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
