--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -63,10 +63,10 @@
 <div>
     <ul class="breadcrumb">
         <li >
-            <a href="../../Home/index.html" tabindex="6">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
         </li>
         <li>
-            <a href="../Home/Shop.html" tabindex="7">Packages</a>
+            <a href="../Home/Shop.html" tabindex="-1">Packages</a>
         </li>
         <li>Daytrip</li>
     </ul>
@@ -130,9 +130,9 @@
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1">Home</a>
             ·
-            <a href="../Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
