--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -75,26 +75,24 @@
     <div  class="galarie">
         <div class="row">
             <div class="column">
-                <img src="../../../img/images/12.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/1.jpg" style="width:100%" alt="">
-                <img src="../../../img/Imges/G3.png" style="width:100%" alt="">
-                <img src="../../../img/Imges/Gurken.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/888.png" style="width:100%" alt="">
+                <img src="../../../img/images/111.png" style="width:100%" alt="">
+                <img src="../../../img/Imges/111.png" style="width:100%" alt="">
             </div>
             <div class="column">
-                <img src="../../../img/images/14.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/2.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/3.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/101010.png" style="width:100%" alt="">
+                <img src="../../../img/images/222.png" style="width:100%" alt="">
                 <img src="../../../img/images/cath.png" style="width:100%" alt="">
             </div>
             <div class="column">
-                <img src="../../../img/images/4.jpeg" style="width:100%" alt="">
-                <img src="../../../img/images/15.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/im.png" style="width:100%" alt="">
+                <img src="../../../img/images/444.png" style="width:100%" alt="">
+                <img src="../../../img/images/111111.png" style="width:100%" alt="">
+                <img src="../../../img/images/333.png" style="width:100%" alt="">
             </div>
             <div class="column">
-                <img src="../../../img/images/33.png" style="width:100%" alt="">
-                <img src="../../../img/images/6.jpg" style="width:100%" alt="">
-                <img src="../../../img/images/7.jpg" style="width:100%" alt="">
+                <img src="../../../img/images/131313.png" style="width:100%" alt="">
+                <img src="../../../img/images/666.png" style="width:100%" alt="">
+                <img src="../../../img/images/777.png" style="width:100%" alt="">
             </div>
         </div>
     </div>
