--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -75,7 +75,7 @@
 <main>
 
     <div id="showcase2" class="grid">
-        <div class="bg-image"> </div>
+        <div class="bg-image2"> </div>
         <div class="content-wrap">
             <h1>Welcome to our Special offers </h1>
             <p>You get 10 percent on all trips and meals.<br> our meals are prepared with organic crops freshly taken from the farm which makes them highly nutritious. <br>You also get pumpkin soup for free. Discover our special offers now!
@@ -94,7 +94,7 @@
 </section>
 
 <div id="showcase3" class="grid">
-    <div class="bg-image"> </div>
+    <div class="bg-image3"> </div>
     <div class="content-wrap">
         <h1>Winter Boat rides in Spreewald</h1>
         <p>
